[project]
name = "langchain-reference-docs"
version = "0.1.0"
description = "LangChain API reference documentation"
requires-python = ">=3.13.0,<4.0.0"
readme = "README.md"
license = "MIT"
dependencies = [
    # Core reference build dependencies
    "mkdocs>=1.6.0,<2.0.0",
    "mkdocs-material[imaging]>=9.6.20,<10.0.0",
    "mkdocstrings>=0.24.0,<1.0.0",
    "mkdocs-minify-plugin>=0.8.0,<1.0.0",
    "mkdocs-git-committers-plugin-2>=1.2.0,<2.0.0",
    "markdown-callouts>=0.3.0,<1.0.0",
    "markdown-include>=0.8.1,<1.0.0",
    "mkdocs-exclude>=1.0.2,<2.0.0",
    "mkdocs-exclude-search>=0.6.5,<1.0.0",
    "mkdocs-include-markdown-plugin>=7.1.6,<8.0.0",

    # TODO: audit above dependencies
    # I copied them over because they were in LangGraph's
    # Not sure if each were used/applys to this project

    # Python
    "mkdocstrings-python>=1.7.0,<2.0.0",

    # Format / Lint
    "ruff>=0.13.0,<14.0.0",

    # Libraries
    "langchain-cli",
    "langchain-core",
    "langchain",
    "langchain-tests",
    "langchain-text-splitters",
    "langchain-anthropic",
    "langchain-chroma",
    "langchain-deepseek",
    "langchain-exa",
    "langchain-fireworks",
    "langchain-groq",
    "langchain-huggingface",
    "langchain-mistralai",
    "langchain-nomic",
    "langchain-ollama",
    "langchain-openai",
    "langchain-perplexity",
    "langchain-prompty",
    "langchain-qdrant",
    "langchain-xai",
    #"langchain-experimental",
    #"langchain-community",
    "langchain-mcp-adapters",
    #"langchain-astradb",
    #"langchain-ai21",
    #"langchain-aws",
    #"langchain-azure-ai",
    #"langchain-azure-dynamic-sessions",
    #"langchain-cerebras",
    #"langchain-cohere",
    #"langchain-db2",
    #"langchain-elasticsearch",
    "langchain-google-community",
    "langchain-google-genai",
    "langchain-google-vertexai",
    #"langchain-ibm",
    #"langchain-milvus",
    "langchain-mongodb",
    #"langchain-neo4j",
    #"langchain-nvidia-ai-endpoints",
    #"langchain-pinecone",
    #"langchain-postgres",
    #"langchain-redis",
    #"langchain-sema4",
    #"langchain-snowflake",
    #"langchain-sqlserver",
    #"langchain-together",
    #"langchain-unstructured",
    #"langchain-upstage",
    #"langchain-weaviate",
    #"langchain-tavily",
    "langgraph",
    "langgraph-prebuilt",
    "langgraph-checkpoint",
    "langgraph-checkpoint-sqlite",
    "langgraph-checkpoint-postgres",
    "langgraph-sdk",
    "langgraph-supervisor",
    "langgraph-swarm",
    "langgraph-checkpoint-aws",
]


[tool.uv]
package = false

[tool.uv.sources]
# !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
# Local installs for development
# NOTE: ensure you are on the correct branch for each repo when doing local installs
#
# The paths assume you have a folder structure like:
# /some-parent-folder
#   /docs
#     /reference <-- this repo
#   /langchain
#     /libs
#       langchain
#       core
#       ...
#   /external-repos-here

## LangChain monorepo packages (alphabetical)
### Top level
## TODO: re-map langchain-v1 on release, add legacy/classic
langchain-cli = { path = "../../langchain/libs/cli", editable = true }
langchain-core = { path = "../../langchain/libs/core", editable = true }
langchain = { path = "../../langchain/libs/langchain_v1", editable = true }
langchain-tests = { path = "../../langchain/libs/standard-tests", editable = true }
langchain-text-splitters = { path = "../../langchain/libs/text-splitters", editable = true }

### Partners
langchain-anthropic = { path = "../../langchain/libs/partners/anthropic", editable = true }
langchain-chroma = { path = "../../langchain/libs/partners/chroma", editable = true }
langchain-deepseek = { path = "../../langchain/libs/partners/deepseek", editable = true }
langchain-exa = { path = "../../langchain/libs/partners/exa", editable = true }
langchain-fireworks = { path = "../../langchain/libs/partners/fireworks", editable = true }
langchain-groq = { path = "../../langchain/libs/partners/groq", editable = true }
langchain-huggingface = { path = "../../langchain/libs/partners/huggingface", editable = true }
langchain-mistralai = { path = "../../langchain/libs/partners/mistralai", editable = true }
langchain-nomic = { path = "../../langchain/libs/partners/nomic", editable = true }
langchain-ollama = { path = "../../langchain/libs/partners/ollama", editable = true }
langchain-openai = { path = "../../langchain/libs/partners/openai", editable = true }
langchain-perplexity = { path = "../../langchain/libs/partners/perplexity", editable = true }
langchain-prompty = { path = "../../langchain/libs/partners/prompty", editable = true }
langchain-qdrant = { path = "../../langchain/libs/partners/qdrant", editable = true }
langchain-xai = { path = "../../langchain/libs/partners/xai", editable = true }

## Experimental
langchain-experimental = { path = "../../langchain-experimental/libs/experimental", editable = true }

## Community
langchain-community = { path = "../../langchain-community/libs/community", editable = true }

## MCP
langchain-mcp-adapters = { path = "../../langchain-mcp-adapters", editable = true }

## Other langchain-ai org packages (alphabetical)
langchain-astradb = { path = "../../langchain-datastax/libs/astradb", editable = true }
langchain-ai21 = { path = "../../langchain-ai21/libs/ai21", editable = true }
langchain-aws = { path = "../../langchain-aws/libs/aws", editable = true }
langchain-azure-ai = { path = "../../langchain-azure/libs/azure-ai", editable = true }
langchain-azure-dynamic-sessions = { path = "../../langchain-azure/libs/azure-dynamic-sessions", editable = true }
langchain-cerebras = { path = "../../langchain-cerebras/libs/cerebras", editable = true }
langchain-cohere = { path = "../../langchain-cohere/libs/cohere", editable = true }
langchain-db2 = { path = "../../langchain-ibm/libs/langchain-db2", editable = true }
langchain-elasticsearch = { path = "../../langchain-elastic/libs/elasticsearch", editable = true }
langchain-google-community = { path = "../../langchain-google/libs/community", editable = true }
langchain-google-genai = { path = "../../langchain-google/libs/genai", editable = true }
langchain-google-vertexai = { path = "../../langchain-google/libs/vertexai", editable = true }
langchain-ibm = { path = "../../langchain-ibm/libs/ibm", editable = true }
langchain-milvus = { path = "../../langchain-milvus/libs/milvus", editable = true }
langchain-mongodb = { path = "../../langchain-mongodb/libs/langchain-mongodb", editable = true }
langchain-neo4j = { path = "../../langchain-neo4j/libs/neo4j", editable = true }
langchain-nvidia-ai-endpoints = { path = "../../langchain-nvidia/libs/ai-endpoints", editable = true }
langchain-pinecone = { path = "../../langchain-pinecone/libs/pinecone", editable = true }
langchain-postgres = { path = "../../langchain-postgres", editable = true }
langchain-redis = { path = "../../langchain-redis/libs/redis", editable = true }
langchain-sema4 = { path = "../../langchain-sema4/libs/sema4", editable = true }
langchain-snowflake = { path = "../../langchain-snowflake/libs/snowflake", editable = true }
langchain-sqlserver = { path = "../../langchain-azure/libs/sqlserver", editable = true }
langchain-together = { path = "../../langchain-together/libs/together", editable = true }
langchain-unstructured = { path = "../../langchain-unstructured/libs/unstructured", editable = true }
langchain-upstage = { path = "../../langchain-upstage/libs/upstage", editable = true }
langchain-weaviate = { path = "../../langchain-weaviate/libs/weaviate", editable = true }

## Non-langchain-ai org packages (alphabetical)
langchain-tavily = { path = "../../langchain-tavily", editable = true }

## LangGraph monorepo packages (alphabetical)
langgraph = { path = "../../langgraph/libs/langgraph", editable = true }
langgraph-prebuilt = { path = "../../langgraph/libs/prebuilt", editable = true }
langgraph-checkpoint = { path = "../../langgraph/libs/checkpoint", editable = true }
langgraph-checkpoint-sqlite = { path = "../../langgraph/libs/checkpoint-sqlite", editable = true }
langgraph-checkpoint-postgres = { path = "../../langgraph/libs/checkpoint-postgres", editable = true }
langgraph-sdk = { path = "../../langgraph/libs/sdk-py", editable = true }

# External repos (alphabetical)
langgraph-supervisor = { path = "../../langgraph-supervisor-py", editable = true }
langgraph-swarm = { path = "../../langgraph-swarm-py", editable = true }
langgraph-checkpoint-aws = { path = "../../langchain-aws/libs/langgraph-checkpoint-aws", editable = true }
# !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!

# Remote installs for prod
# Uncomment out and comment out local installs above for production deployment

## LangChain monorepo packages (alphabetical)
### Top level
## TODO: re-map langchain-v1 on release, add legacy/classic
#langchain-cli = { git = "https://github.com/langchain-ai/langchain.git", subdirectory = "libs/cli", branch = "wip-v1.0" }
#langchain-core = { git = "https://github.com/langchain-ai/langchain.git", subdirectory = "libs/core", branch = "wip-v1.0" }
#langchain = { git = "https://github.com/langchain-ai/langchain.git", subdirectory = "libs/langchain_v1", branch = "wip-v1.0" }
#langchain-tests = { git = "https://github.com/langchain-ai/langchain.git", subdirectory = "libs/standard-tests", branch = "wip-v1.0" }
#langchain-text-splitters = { git = "https://github.com/langchain-ai/langchain.git", subdirectory = "libs/text-splitters", branch = "wip-v1.0" }

### Partners
#langchain-anthropic = { git = "https://github.com/langchain-ai/langchain.git", subdirectory = "libs/partners/anthropic", branch = "wip-v1.0" }
#langchain-chroma = { git = "https://github.com/langchain-ai/langchain.git", subdirectory = "libs/partners/chroma" }
#langchain-deepseek = { git = "https://github.com/langchain-ai/langchain.git", subdirectory = "libs/partners/deepseek" }
#langchain-exa = { git = "https://github.com/langchain-ai/langchain.git", subdirectory = "libs/partners/exa" }
#langchain-fireworks = { git = "https://github.com/langchain-ai/langchain.git", subdirectory = "libs/partners/fireworks" }
#langchain-groq = { git = "https://github.com/langchain-ai/langchain.git", subdirectory = "libs/partners/groq" }
#langchain-huggingface = { git = "https://github.com/langchain-ai/langchain.git", subdirectory = "libs/partners/huggingface" }
#langchain-mistralai = { git = "https://github.com/langchain-ai/langchain.git", subdirectory = "libs/partners/mistralai" }
#langchain-nomic = { git = "https://github.com/langchain-ai/langchain.git", subdirectory = "libs/partners/nomic" }
#langchain-ollama = { git = "https://github.com/langchain-ai/langchain.git", subdirectory = "libs/partners/ollama" }
#langchain-openai = { git = "https://github.com/langchain-ai/langchain.git", subdirectory = "libs/partners/openai", branch = "wip-v1.0" }
#langchain-perplexity = { git = "https://github.com/langchain-ai/langchain.git", subdirectory = "libs/partners/perplexity" }
#langchain-prompty = { git = "https://github.com/langchain-ai/langchain.git", subdirectory = "libs/partners/prompty" }
#langchain-qdrant = { git = "https://github.com/langchain-ai/langchain.git", subdirectory = "libs/partners/qdrant" }
#langchain-xai = { git = "https://github.com/langchain-ai/langchain.git", subdirectory = "libs/partners/xai" }

## Experimental
#langchain-experimental = { git = "https://github.com/langchain-ai/langchain-experimental.git", subdirectory = "libs/experimental" }

## Community
#langchain-community = { git = "https://github.com/langchain-ai/langchain-community.git", subdirectory = "libs/community" }

## MCP
#langchain-mcp-adapters = { git = "https://github.com/langchain-ai/langchain-mcp-adapters.git" }

## Other langchain-ai org packages (alphabetical)
#langchain-astradb = { git = "https://github.com/langchain-ai/langchain-datastax.git", subdirectory = "libs/astradb" }
#langchain-ai21 = { git = "https://github.com/langchain-ai/langchain-ai21.git", subdirectory = "libs/ai21" }
#langchain-aws = { git = "https://github.com/langchain-ai/langchain-aws.git", subdirectory = "libs/aws" }
#langchain-azure-ai = { git = "https://github.com/langchain-ai/langchain-azure.git", subdirectory = "libs/azure-ai" }
#langchain-azure-dynamic-sessions = { git = "https://github.com/langchain-ai/langchain-azure.git", subdirectory = "libs/azure-dynamic-sessions" }
#langchain-cerebras = { git = "https://github.com/langchain-ai/langchain-cerebras.git", subdirectory = "libs/cerebras" }
#langchain-cohere = { git = "https://github.com/langchain-ai/langchain-cohere.git", subdirectory = "libs/cohere" }
#langchain-db2 = { git = "https://github.com/langchain-ai/langchain-ibm.git", subdirectory = "libs/langchain-db2" }
#langchain-elasticsearch = { git = "https://github.com/langchain-ai/langchain-elastic.git", subdirectory = "libs/elasticsearch" }
#langchain-google-community = { git = "https://github.com/langchain-ai/langchain-google.git", subdirectory = "libs/community" }
#langchain-google-genai = { git = "https://github.com/langchain-ai/langchain-google.git", subdirectory = "libs/genai" }
#langchain-google-vertexai = { git = "https://github.com/langchain-ai/langchain-google.git", subdirectory = "libs/vertexai" }
#langchain-ibm = { git = "https://github.com/langchain-ai/langchain-ibm.git", subdirectory = "libs/ibm" }
#langchain-milvus = { git = "https://github.com/langchain-ai/langchain-milvus.git", subdirectory = "libs/milvus" }
#langchain-mongodb = { git = "https://github.com/langchain-ai/langchain-mongodb.git", subdirectory = "libs/langchain-mongodb" }
#langchain-neo4j = { git = "https://github.com/langchain-ai/langchain-neo4j.git", subdirectory = "libs/neo4j" }
#langchain-nvidia-ai-endpoints = { git = "https://github.com/langchain-ai/langchain-nvidia.git", subdirectory = "libs/ai-endpoints" }
#langchain-pinecone = { git = "https://github.com/langchain-ai/langchain-pinecone.git", subdirectory = "libs/pinecone" }
#langchain-postgres = { git = "https://github.com/langchain-ai/langchain-postgres.git" }
#langchain-redis = { git = "https://github.com/langchain-ai/langchain-redis.git", subdirectory = "libs/redis" }
#langchain-sema4 = { git = "https://github.com/langchain-ai/langchain-sema4.git", subdirectory = "libs/sema4" }
#langchain-snowflake = { git = "https://github.com/langchain-ai/langchain-snowflake.git", subdirectory = "libs/snowflake" }
#langchain-sqlserver = { git = "https://github.com/langchain-ai/langchain-azure.git", subdirectory = "libs/sqlserver" }
#langchain-together = { git = "https://github.com/langchain-ai/langchain-together.git", subdirectory = "libs/together" }
#langchain-unstructured = { git = "https://github.com/langchain-ai/langchain-unstructures.git", subdirectory = "libs/unstructured" }
#langchain-upstage = { git = "https://github.com/langchain-ai/langchain-upstage.git", subdirectory = "libs/upstage" }
#langchain-weaviate = { git = "https://github.com/langchain-ai/langchain-weaviate.git", subdirectory = "libs/weaviate" }

## Non-langchain-ai org packages (alphabetical)
#langchain-tavily = { git = "https://github.com/tavily-ai/langchain-tavily.git" }

## LangGraph monorepo packages (alphabetical)
#langgraph = { git = "https://github.com/langchain-ai/langgraph", subdirectory = "libs/langgraph" }
#langgraph-prebuilt = { git = "https://github.com/langchain-ai/langgraph", subdirectory = "libs/prebuilt" }
#langgraph-checkpoint = { git = "https://github.com/langchain-ai/langgraph", subdirectory = "libs/checkpoint" }
#langgraph-checkpoint-sqlite = { git = "https://github.com/langchain-ai/langgraph", subdirectory = "libs/checkpoint-sqlite" }
#langgraph-checkpoint-postgres = { git = "https://github.com/langchain-ai/langgraph", subdirectory = "libs/checkpoint-postgres" }
#langgraph-sdk = { git = "https://github.com/langchain-ai/langgraph", subdirectory = "libs/sdk-py" }

# External repos (alphabetical)
#langgraph-supervisor = { git = "https://github.com/langchain-ai/langgraph-supervisor-py" }
#langgraph-swarm = { git = "https://github.com/langchain-ai/langgraph-swarm-py" }
#langgraph-checkpoint-aws = { git = "https://github.com/langchain-ai/langchain-aws.git", subdirectory = "libs/langgraph-checkpoint-aws" }

